GNOME Bugzilla – Bug 697427
Unreferencing GtkStatusIcon object causes abort
Last modified: 2013-04-08 14:35:31 UTC
Created attachment 240838 [details] Test case for GtkStatusIcon Unreferencing a GtkStatusIcon object triggers an assertion as follows: Gtk:ERROR:gtkwidget.c:14129:gtk_widget_unregister_window: assertion failed: (user_data == widget) Aborted A trivial test case demonstrating this is attached. The bug was introduced somewhere in GTK+-3.7 and manifests itself in GTK+-3.8.0.
Created attachment 240844 [details] [review] Unreferencing a GtkPlug could cause abort; Fix #697427 Note that I'm not very familiar with the whole GtkPlug/GtkSocket process, so I may have missed something. FYI I believe the bug would also cause any app with a GtkStatusIcon to crash when e.g. changing the active WM.
"Unreferencing a GtkPlug could cause abort; Fix #697427" This fixes the problem for me with audacious and two other programs which insert a status icon in the system tray (or whatever it is now called). Without it, audacious and one of the others fail to clean up correctly, leading to a potential loss of data (in the case of audacious, a failure to store preferences).
Fixed in b662e96e7e8ec83ee64ace74dd4d834a2a2c177d.